refactor: 7/18 코드리뷰 반영 (DTO 분리)